Feat : `BinaryTagData` 변경에 따른 코드 수정
- `BinaryTagData`의 `binaryEntryIds`가 로직 재구성에 따라 `List<Byte>`로 변경됨